# cpp_labworks

archiver/: CMakeLists.txt  README.md
archiver/lib/: CMakeLists.txt  archiver.cpp  archiver.h  archiver_add.cpp  archiver_creator.cpp  archiver_delete.cpp  archiver_extract.cpp  archiver_info.cpp  archiver_merger.cpp  hamming_codes.cpp  hamming_codes.h  heap.cpp  heap.h
archiver/tests/: CMakeLists.txt  archiver_test.cpp
argparser/: README.md
argparser/lib/: ArgParser.cpp  ArgParser.h  Argument.h  HelpLine.cpp  HelpLine.h
argparser/tests/: argparser_test.cpp
sandpile/: CMakeLists.txt
sandpile/lib/: CMakeLists.txt  bmp_writer.h  my_queue.cpp  my_queue.h  sandpile.cpp  sandpile.h
sandpile_model/: README.md  test.tsv
sandpile_model/lib/: bmp_writer.cpp  parse_arguments.cpp  parse_arguments.h
